# sx1302_esp32

./: CMakeLists.txt
main/: CMakeLists.txt  test_loragw_com.c  test_loragw_com_CMakeLists.txt  test_loragw_com_sx1250.c
main/src/: loragw_aux.c  loragw_com.c  loragw_com.h  loragw_reg.c  loragw_reg.h  loragw_spi.c  loragw_spi.h  loragw_sx1250.c  sx1250_com.c  sx1250_com.h  sx1250_spi.c  sx1250_spi.h
